Resolved merge issue. Subpage images display correctly on mobile

--- a/public/design/css/main.less
+++ b/public/design/css/main.less
@@ -892,10 +892,6 @@ header{
 
 #subpage-head{
 
-	@media (max-width:@screen-xs-max){
-		height: 250px;
-		min-height: 1px;
-	}
 	.subpage-hero{
 		padding: 0px;
 		overflow: hidden;
@@ -909,19 +905,11 @@ header{
 		max-width: 1700px;
 	  }
 
-		@media (max-width:@screen-xs-max){
+		@media (max-width:@screen-sm-max){
 			img{
-				width: 100%;
-				height: 300px;
+				width: 150%;
 				margin-top: -10%;
 				margin-left: -25%;
-			}
-		}
-
-		@media (max-width:@screen-sm-max){
-			height:350px;
-			img{
-				max-width: 150%;
 			}
 		}
 
